--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </button>
             
             <!-- Foto de perfil (solo visible con login) -->
-            <img id="fotoPerfil" class="foto-perfil" src="img/default.png" style="display: none;">
+            <img id="fotoPerfil" class="foto-perfil" src="img/default.png" alt="Foto de perfil" style="display: none;">
 
             <div class="user-menu" id="userMenu">
                 <button id="btnMiPerfil" class="btn btn-primary" data-i18n="profile_profile">Mi perfil</button>
@@ -103,11 +103,11 @@
                 <div class="carousel-track" id="carousel-track">
                     <div class="pack-card">
                         <div class="pack-image">
-                            <img id="carousel-img" src="" alt="">
+                            <img id="carousel-img" src="images/pack/japon.jpg" alt="Pack destacado">
                         </div>
                         <div class="pack-content">
                             <div>
-                                <h3 id="carousel-title"></h3>
+                                <h3 id="carousel-title">Pack destacado</h3>
                                 <p id="carousel-desc" class="carousel-desc"></p>
                             </div>
                             <div class="pack-footer">
