--- a/registro.html
+++ b/registro.html
@@ -204,7 +204,7 @@
                     <li><a href="#" data-i18n="footer_legal_notice">Aviso Legal</a></li>
                     <li><a href="contacto.html" data-i18n="nav_contact">Contacto</a></li>
                     <li>
-                        <select name="idioma" id="idioma">
+                        <select name="idioma" id="idiomaFooter">
                             <option value="es">🇪🇸 Español</option>
                             <option value="en">🇬🇧 English</option>
                         </select>
