--- a/versionb.html
+++ b/versionb.html
@@ -64,7 +64,7 @@
             </button>
             
             <!-- Foto de perfil (solo visible con login) -->
-            <img id="fotoPerfil" class="foto-perfil" src="img/default.png" style="display: none;">
+            <img id="fotoPerfil" class="foto-perfil" src="img/default.png" alt="Foto de perfil" style="display: none;">
 
             <div class="user-menu" id="userMenu">
                 <button id="btnMiPerfil" class="btn btn-primary" data-i18n="profile_profile">Mi perfil</button>
@@ -298,9 +298,9 @@
                     <div class="friends-left">
                         <div class="friends-header">
                             <div class="friends-tabs" role="tablist" aria-label="Amigos Tabs">
-                                <button type="button" class="friends-tab-btn active" data-tab="friends" role="tab" aria-selected="true">Amigos</button>
-                                <button type="button" class="friends-tab-btn" data-tab="add" role="tab" aria-selected="false">Añadir</button>
-                                <button type="button" class="friends-tab-btn" data-tab="online" role="tab" aria-selected="false">Online</button>
+                                <button type="button" class="friends-tab-btn active" data-tab="friends" role="tab" aria-selected="true" aria-controls="panel-friends" id="tab-friends">Amigos</button>
+                                <button type="button" class="friends-tab-btn" data-tab="add" role="tab" aria-selected="false" aria-controls="panel-add" id="tab-add">Añadir</button>
+                                <button type="button" class="friends-tab-btn" data-tab="online" role="tab" aria-selected="false" aria-controls="panel-online" id="tab-online">Online</button>
                             </div>
                         </div>
 
@@ -363,13 +363,13 @@
             <div class="sidebar-widget">
                 <h3><i class="fas fa-lightbulb"></i> Últimos Consejos</h3>
                 <div id="consejos">
-                    <h4 id="consejos1Titulo"></h4>
+                    <h4 id="consejos1Titulo">Consejo 1</h4>
                     <p id="consejos1Descripcion"></p>
 
-                    <h4 id="consejos2Titulo"></h4>
+                    <h4 id="consejos2Titulo">Consejo 2</h4>
                     <p id="consejos2Descripcion"></p>
 
-                    <h4 id="consejos3Titulo"></h4>
+                    <h4 id="consejos3Titulo">Consejo 3</h4>
                     <p id="consejos3Descripcion"></p>
                 </div>
 
@@ -417,7 +417,7 @@
                     <li><a href="#" data-i18n="footer_legal_notice">Aviso Legal</a></li>
                     <li><a href="contacto.html" data-i18n="nav_contact">Contacto</a></li>
                     <li>
-                        <select name="idioma" id="idioma">
+                        <select name="idioma" id="idiomaFooter">
                             <option value="es">🇪🇸 Español</option>
                             <option value="en">🇬🇧 English</option>
                         </select>
