--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
                 <i class="fas fa-user-circle"></i>
                 <span data-i18n="btn_my_account">Mi Cuenta</span>
             </button>
-            <img id="fotoPerfil" class="foto-perfil" src="img/default.png" style="display: none;">
+            <img id="fotoPerfil" class="foto-perfil" src="img/default.png" alt="Foto de perfil" style="display: none;">
             <div class="user-menu" id="userMenu">
                 <button id="btnMiPerfil" class="btn btn-primary" data-i18n="profile_profile">Mi perfil</button>
                 <button class="btn btn-primary" data-i18n="profile_friends">Mis Amigos</button>
