redes sociales (copiar url)

--- a/blog.html
+++ b/blog.html
@@ -172,5 +172,6 @@
     <script src="script/profile.js"></script>
     <script src="data/blog.js"></script>
     <script src="script/blog.js" defer></script>
+    <script src="script/social-share.js"></script>
 </body>
 </html>
