--- a/comprar.html
+++ b/comprar.html
@@ -371,5 +371,6 @@
     <script src="script/versionb.js"></script>
     <script src="script/friends.js"></script>
     <script src="script/profile.js"></script>
+    <script src="script/social-share.js"></script>
 </body>
 </html>
