--- a/versionb.html
+++ b/versionb.html
@@ -443,5 +443,6 @@
     <script src="script/friends.js"></script>
     <script src="script/profile.js"></script>
 
+    <script src="script/social-share.js"></script>
 </body>
 </html>
