--- a/buscar-rutas.html
+++ b/buscar-rutas.html
@@ -785,5 +785,6 @@
     <script src="script/nav.js"></script>
     <script src="script/profile.js"></script>
 
+    <script src="script/social-share.js"></script>
 </body>
 </html>
