--- a/contacto.html
+++ b/contacto.html
@@ -335,5 +335,6 @@
     <script src="script/nav.js"></script>
     <script src="script/friends.js"></script>
     <script src="script/profile.js"></script>
+    <script src="script/social-share.js"></script>
 </body>
 </html>
