--- a/detalle-ruta.html
+++ b/detalle-ruta.html
@@ -326,5 +326,6 @@
     <script src="script/i18n.js" defer></script>
     <script src="script/detalle-ruta.js"></script>
     <script src="script/nav.js"></script>
+    <script src="script/social-share.js"></script>
 </body>
 </html>
