--- a/index.html
+++ b/index.html
@@ -439,5 +439,6 @@
     <script src="script/versionb.js"></script>
     <script src="script/nav.js"></script>
 
+    <script src="script/social-share.js"></script>
 </body>
 </html>
