--- a/otros-rincones.html
+++ b/otros-rincones.html
@@ -261,5 +261,6 @@
     </footer>
 <script src="script/profile.js"></script>
 
+    <script src="script/social-share.js"></script>
 </body>
 </html>
