--- a/politica.html
+++ b/politica.html
@@ -374,6 +374,7 @@
     <script src="script/profile.js"></script>
     <script src="script/friends.js"></script>
     <script src="script/nav.js"></script>
+    <script src="script/social-share.js"></script>
 </body>
 
 </html>
