--- a/registro.html
+++ b/registro.html
@@ -228,6 +228,7 @@
 
     <script src="./script/registro.js"></script>
     <script src="script/nav.js"></script>
+    <script src="script/social-share.js"></script>
 </body>
 </html>
 
