--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
                 <button class="btn btn-secondary btn-block" data-i18n="profile_logout" onclick="cerrarSesion()">Cerrar sesión</button>
             </div>
             <div class="user-menu-no-login" id="userMenuNoLogin">
-                <button class="btn btn-primary btn-block" onclick="window.location.href='registro.html'" data-i18n="auth_login">Iniciar sesión</button>
+                <button class="btn btn-primary btn-block" onclick="window.location.href='index.html#SidebarLogin'" data-i18n="auth_login">Iniciar sesión</button>
                 <button class="btn btn-secondary btn-block" onclick="window.location.href='registro.html'" data-i18n="auth_register">Registrarse</button>
             </div>
         </div>
