--- a/comunidad.html
+++ b/comunidad.html
@@ -62,7 +62,7 @@
             </div>
             
             <div class="user-menu-no-login" id="userMenuNoLogin">
-                <button class="btn btn-primary btn-block" onclick="window.location.href='registro.html'" data-i18n="auth_login">Iniciar sesión</button>
+                <button class="btn btn-primary btn-block" onclick="window.location.href='index.html#SidebarLogin'" data-i18n="auth_login">Iniciar sesión</button>
                 <button class="btn btn-secondary btn-block" onclick="window.location.href='registro.html'" data-i18n="auth_register">Registrarse</button>
             </div>
         </div>
@@ -282,7 +282,7 @@
                     <i class="fas fa-lock"></i>
                     <h3 data-i18n="login_required_title">Inicia sesión para participar</h3>
                     <p data-i18n="login_required_text">Necesitas estar logueado para crear temas y responder mensajes. Los temas pueden ser vistos por todos.</p>
-                    <button class="btn btn-primary" onclick="window.location.href='registro.html'" data-i18n="auth_login">Iniciar sesión</button>
+                    <button class="btn btn-primary" onclick="window.location.href='index.html#SidebarLogin'" data-i18n="auth_login">Iniciar sesión</button>
                 </div>
 
                 <!-- Lista de Temas -->
