--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             
             <div class="user-menu-no-login" id="userMenuNoLogin">
-                <button class="btn btn-primary btn-block" onclick="window.location.href='registro.html'" data-i18n="auth_login">Iniciar sesión</button>
+                <button class="btn btn-primary btn-block" onclick="window.location.href='#SidebarLogin'" data-i18n="auth_login">Iniciar sesión</button>
                 <button class="btn btn-secondary btn-block" onclick="window.location.href='registro.html'" data-i18n="auth_register">Registrarse</button>
             </div>
         </div>
