--- a/detalle-ruta.html
+++ b/detalle-ruta.html
@@ -137,7 +137,7 @@
 
         <!-- Galería de imágenes -->
         <section class="route-gallery" aria-labelledby="routeGalleryTitle">
-            <h2 id="routeGalleryTitle" class="visually-hidden">Galería de la ruta</h2>
+            <h2 id="routeGalleryTitle">Galería de la ruta</h2>
             <div class="gallery-main">
                 <img src="images/Machu_Picchu.jpg" alt="Imagen principal" id="mainImage">
                 <button class="gallery-fullscreen" id="fullscreenBtn">
