--- a/index.html
+++ b/index.html
@@ -333,11 +333,8 @@
 
     <script src="script/carousel.js"></script>
     <script src="script/versionb.js"></script>
-<<<<<<< HEAD
-    <script src="script/nav.js"></script>
+    <!-- <script src="script/nav.js"></script> -->
 
     <script src="script/social-share.js"></script>
-=======
->>>>>>> 570a1a6 (Reorganizar header y footer)
 </body>
 </html>
